--- a/config.json
+++ b/config.json
@@ -8,6 +8,7 @@
     "local": {
         "templates": {
            "path": "source/templates/",
+           "layout": "source/templates/layout.mustache",
            "post": "source/templates/index.mustache",
            "archive": "source/templates/archive.mustache"
         },
