первичная поддержка тегов

--- a/config.json
+++ b/config.json
@@ -25,5 +25,22 @@
     },
     "s3": {
         "bucket": "s3://addmeto.cc/"
+    },
+    "tags": {
+        "NSFW": "♂",
+        "fun": "✌",
+        "patent": "✍",
+        "browser": "⚀",
+        "mobile": "m",
+        "hate": "⚔",
+        "startup": "$",
+        "html": "‽",
+        "opensource": "⚓",
+        "highload": "✪",
+        "android": "♡",
+        "search": "⚐",
+        "functional": "☭",
+        "unix": "♏",
+        "lowlevel": "▽"
     }
 }
