--- a/config.json
+++ b/config.json
@@ -9,10 +9,12 @@
         "templates": {
            "path": "source/templates/",
            "post": "source/templates/index.mustache",
+           "section": "source/templates/section.mustache",
            "archive": "source/templates/archive.mustache"
         },
         "editor": "open -a /Applications/Byword.app '%s'",
         "posts": "source/posts/",
+        "section": "source/section/",
         "drafts": "source/drafts/",
         "results": {
            "path": "results/",
