--- a/config.json
+++ b/config.json
@@ -16,6 +16,7 @@
         "posts": "source/posts/",
         "section": "source/section/",
         "drafts": "source/drafts/",
+        "source": "source",
         "results": {
            "path": "results/",
            "posts": "results/post/",
