--- a/config.json
+++ b/config.json
@@ -12,7 +12,7 @@
            "section": "source/templates/section.mustache",
            "archive": "source/templates/archive.mustache"
         },
-        "editor": "open -a /Applications/Byword.app '%s'",
+        "editor": "open -a /Applications/iA\\ Writer.app '%s'",
         "posts": "source/posts/",
         "section": "source/section/",
         "drafts": "source/drafts/",
