--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,13 @@
 .DS_Store
 .index.db
-results/archive/
-results/about/
-results/feed
-results/index.html
-results/2*/
-results/static/
-results/pages/
-pages/archive.md
+site/archive/
+site/about/
+site/feed
+site/index.html
+site/2*/
+site/static/
+site/pages/
+site/archive.md
 .idea
 *.sublime-*
 v
